[project]
name = "mcp-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
]
